--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   text-transform: uppercase;
-  font-size: 18px;
+  font-size: 13px;
   padding: 0 100px;
   top: 0;
   left: 0;
@@ -52,8 +52,6 @@ nav a:link {
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.6)), url('./Images/market-601580_1920.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    
-
 }
 
 #logo {
@@ -67,8 +65,8 @@ nav a:link {
 }
 
 main {
-    margin: 20px 85px;
-  padding: 24px;
+  margin: 20px 102px;
+  /* padding: 24px; */
   /* margin-top: 120px; */
   line-height: 1.5;
   color:#333;
@@ -76,84 +74,82 @@ main {
 
 p{
     font-size: 20px;
+    text-align: justify;
 }
 
-#welcome {
+.subHeading {
 color: #333;
-font-size: 50px;
+font-size: 40px;
 text-align: center;
-letter-spacing: 1px;
-font-weight: 300;
+letter-spacing: 0.5px;
+margin-top: 40px;
+font-weight: 250;
 }
 
-#welcome::after {
+.subHeading::after {
     content: "";
     display: block;
-    /* padding-top: 0px; */
-	border-bottom: 3px solid #228b22;
+   	border-bottom: 3px solid #228b22;
 	width: 10%;
 	margin: 0 auto 10px auto;
     }
 
-    #why_farm2t {
+#why_farm2t {
         display: flex;
+        margin-top: 50px;
        
     }
-    
-    #about {
+        
+#about {
         margin-right: 150px;
     }
 
-    #why_farm2t img {
-        width: 400px;
-        height: 400px;
+#why_farm2t img {
+        width: 350px;
+        height: 350px;
         object-fit: cover;
 
     }
+    
 .container {
   position: relative;
-  width: 100%;
-  max-width: 1000px;
   display: flex;
   align-items: center;
+  justify-content: space-evenly;
   flex-wrap: wrap;
-  padding: 30px 0;
-}
-.container .card {
-  position: relative;
-  max-width: 290px;
-  height: 110px;
-  background: #ffffff;
-  margin: 30px 10px;
-  padding: 20px 15px;
-  display: flex;
-  flex-direction: column;
-  box-shadow: 0 5px 100px rgba(0, 0, 0, 0.5);
 }
 
-.container .card:hover {
-  height: 270px;
+.container .card {
+    padding: 20px 0px;
 }
+
+/* .container .card:hover {
+  height: 270px;
+} */
+
 .card .imgBx {
   position: relative;
-  width: 250px;
-  height: 260px;
-  top: -60px;
-  left: 20px;
+  width: 300px;
+  height: auto;
+  object-fit: cover;
+  /* top: -60px; */
+  /* left: 20px; */
   z-index: 0;
   box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
   transition: 0.3s ease-in-out;
-}
+ } 
 
 .container .card .imgBx img {
   max-width: 100%;
+  height: 100%;
   border-radius: 10px;
 }
 
 .container .card .content {
   position: relative;
+  width: 300px;
   margin-top: -140px;
-  padding: 10px 15px;
+  padding: 20px 15px;
   text-align: center;
   color: #228b22;
   visibility: hidden;
@@ -164,68 +160,63 @@ font-weight: 300;
 .container .card:hover .content {
   visibility: visible;
   opacity: 1;
-  margin-top: -40px;
+  margin-top: -5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   transition-delay: 0.3s;
 }
 
-.join {
+.join p{
   text-align: center;
 }
 
-.form {
+.regForm {
   background-color: rgb(255, 255, 255);
-  color: #fff;
-  font-size: 18px;
   border-radius: 25px;
   text-align: center;
-  padding: 40px 10px;
+  padding: 25px;
   max-width: 400px;
+  /* height: 600px; */
   color: rgb(17, 17, 17);
   margin: 0 auto;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.form .text {
+.regForm .text {
   margin-top: 20px;
-  font-size: 16px;
+  font-size: 15px;
   font-style: italic;
   margin-bottom: 20px;
 }
 
-.form input {
-  height: 38px;
+.regForm input {
+  height: 20px;
   margin-top: 30px;
   width: 100%;
+  padding: 20px;
 }
 
-.form .radio {
-  margin-top: 10px;
-  color: forestgreen;
+.regForm .radio {
+  margin-top: 3px;
+  color: #228b22;
 }
 
-.form .option {
+.regForm .option {
   display: inline-block;
-  margin-top: 25px;
-}
-
-.form .input-group {
-  display: flex;
-}
-
-.form input[type="checkbox"] {
   margin-top: 10px;
 }
 
 .btn {
-  background-color: forestgreen;
+  background-color: #228b22;
   margin-top: 20px;
   color: rgb(255, 255, 255);
   font-size: 20px;
   border: none;
   padding: 10px 40px;
 }
+
 footer {
-  background-color: rgb(39, 87, 39);
-  color: gainsboro;
+  background-color: #228b22;
+  color: #fff;
   margin-top: 50px;
   padding: 20px 24px;
 }
@@ -239,8 +230,4 @@ footer a:link {
   color: white;
   text-decoration: none;
 }
-#logodesign {
-  display: inline-block;
-  font-size: 10px;
-  margin-top: 10px;
-}
+
